services/iot-rest-api/openshift/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: iot-psql
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"iot-rest-api:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"iot-rest-api\")].image"}]'
  labels:
    app: iot-rest-api
    app.openshift.io/runtime: nodejs
    app.kubernetes.io/component: iot-rest-api
    app.kubernetes.io/instance: iot-rest-api
  name: iot-rest-api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: iot-rest-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: iot-rest-api
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: dev
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: POSTGRES_USER
              name: pg-login
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: pg-login
        image: iot-rest-api:latest
        imagePullPolicy: IfNotPresent
        name: iot-rest-api
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
