services/iot-rest-api/openshift/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iot-rest-api
    app.kubernetes.io/component: iot-rest-api
    app.kubernetes.io/instance: iot-rest-api
  name: iot-rest-api
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: iot-rest-api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
